--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a class="nav-link active" href="#header">Home</a></li>
                     <li><a class="nav-link" href="#about">About</a></li>
-                    <li><a class="nav-link" href="#">Services</a></li>
+                    <li><a class="nav-link" href="#services">Services</a></li>
                     <li><a class="nav-link" href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -29,6 +29,27 @@
     </header>
 
     <section id="about" class="about">
+        <div class="container">
+
+            <h1 style="font-size: 32px; font-weight: 800; text-align: center;"><span class="hr-lines">About Me</span>
+            </h1>
+
+            <div class="row">
+                <div class="col-sm">
+                    <img src="https://www.gravatar.com/avatar/2c7d99fe281ecd3bcd65ab915bac6dd5?s=250"
+                        class="profile-avatar">
+                </div>
+                <div class="col">
+                    <h1 style="font-weight: 800;color: var(--secondary)">Web Developer and Designer</h1>
+                    <div class="about-row">
+                        <h3>Name:</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="services" class="services">
         <div class="container">
             <h1>Hello World</h1>
         </div>
