--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a class="nav-link active" href="#header">Home</a></li>
                     <li><a class="nav-link" href="#about">About</a></li>
                     <li><a class="nav-link" href="#services">Services</a></li>
-                    <li><a class="nav-link" href="#">Contact</a></li>
+                    <li><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </nav>
 
@@ -30,19 +30,26 @@
 
     <section id="about" class="about">
         <div class="container">
-
-            <h1 style="font-size: 32px; font-weight: 800; text-align: center;"><span class="hr-lines">About Me</span>
-            </h1>
+            
+            <h1 style="font-size: 32px; font-weight: 800; text-align: center;"><span class="hr-lines">About Me</span></h1>
 
             <div class="row">
                 <div class="col-sm">
-                    <img src="https://www.gravatar.com/avatar/2c7d99fe281ecd3bcd65ab915bac6dd5?s=250"
-                        class="profile-avatar">
+                    <img src="https://www.gravatar.com/avatar/2c7d99fe281ecd3bcd65ab915bac6dd5?s=250" class="profile-avatar">
                 </div>
                 <div class="col">
-                    <h1 style="font-weight: 800;color: var(--secondary)">Web Developer and Designer</h1>
-                    <div class="about-row">
-                        <h3>Name:</h3>
+                    <h1 style="font-size: 34px;font-weight: 800;color:var(--secondary)">Web Developer</h1>
+                    <div class="about-row" style="padding-top: 30px;">
+                        <div class="col">
+                            <h3>Age: <span id="age"></span></h3>
+                            <h3>Contact Number: <a href="+639083833630">+63-908-383-3630</a></h3>
+                            <h3>Recent Project: <a href="https://cassiaglassbbwpc.wpcomstaging.com/">Cassia Glass</a></h3>
+                            <h3>Email: <a href="mailto:danny.aics@gmail.com">danny.aics@gmail.com</a></h3>
+                            <h3></h3>
+                        </div>
+                        <div class="col">
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -52,6 +59,12 @@
     <section id="services" class="services">
         <div class="container">
             <h1>Hello World</h1>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h1>Hello Guys</h1>
         </div>
     </section>
 
