--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 
     <section id="about" class="about">
         <div class="container">
-            
-            <h1 style="font-size: 32px; font-weight: 800; text-align: center;"><span class="hr-lines">About Me</span></h1>
+
+            <h1 style=" font-size: 32px; font-weight: 800; text-align: center;"><span class="hr-lines">About
+                    Me</span></h1>
 
             <div class="row">
                 <div class="col-sm">
-                    <img src="https://www.gravatar.com/avatar/2c7d99fe281ecd3bcd65ab915bac6dd5?s=250" class="profile-avatar">
+                    <img src="https://www.gravatar.com/avatar/2c7d99fe281ecd3bcd65ab915bac6dd5?s=250"
+                        class="profile-avatar">
                 </div>
                 <div class="col">
                     <h1 style="font-size: 34px;font-weight: 800;color:var(--secondary)">Web Developer</h1>
@@ -43,13 +45,10 @@
                         <div class="col">
                             <h3>Age: <span id="age"></span></h3>
                             <h3>Contact Number: <a href="+639083833630">+63-908-383-3630</a></h3>
-                            <h3>Recent Project: <a href="https://cassiaglassbbwpc.wpcomstaging.com/">Cassia Glass</a></h3>
+                            <h3>Recent Project: <a href="https://cassiaglassbbwpc.wpcomstaging.com/">Cassia
+                                    Glass</a></h3>
                             <h3>Email: <a href="mailto:danny.aics@gmail.com">danny.aics@gmail.com</a></h3>
-                            <h3></h3>
-                        </div>
-                        <div class="col">
-
-                        </div>
+                            <h3>LinkedIn: <a href="https://ph.linkedin.com/in/daniel-romano-13a632239?trk=public_profile_browsemap">Daniel Romano</a></h3>
                     </div>
                 </div>
             </div>
