Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
 
     <header id="header">
+        <div class="mobile-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <div class="container">
             <h1>Daniel Romano</h1>
             <h2>I'm an aspiring <span>Content Creator</span> and <span>Web Developer</span></h2>
@@ -36,23 +41,26 @@
 
             <div class="row">
                 <div class="col-sm">
-                    <img src="https://www.gravatar.com/avatar/2c7d99fe281ecd3bcd65ab915bac6dd5?s=250"
+                    <img src="https://scontent.fceb5-1.fna.fbcdn.net/v/t1.6435-9/32169206_192448328061904_3389949237839003648_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeEXMWrik6stvkuhaPyWhtGXqI2h1AwmZEqojaHUDCZkSrGoRl5XuFY8HP-9s7CEPJeGhR0CCO3-tPLcklOlurg5&_nc_ohc=rB-NEQ1OLlYAX-4SoO6&_nc_oc=AQmzx4bANNeXcRkOoEHeTF5GgeR51HRMIZbGUV0TZxehGefMIM2NmUotzvewW-NejE8&tn=bsZsaUtHo1V4fWjc&_nc_ht=scontent.fceb5-1.fna&oh=00_AfAxaj7jCWrErGwS8fIGh1U1FpiKJi9TRaTqcjsjkReEPw&oe=63AD51C8"
                         class="profile-avatar">
                 </div>
                 <div class="col">
                     <h1 style="font-size: 34px;font-weight: 800;color:var(--secondary)">Web Developer</h1>
+
                     <div class="about-row" style="padding-top: 30px;">
                         <div class="col">
-                            <h3>Age: <span id="age"></span></h3>
-                            <h3>Contact Number: <a href="+639083833630">+63-908-383-3630</a></h3>
-                            <h3>Recent Project: <a href="https://cassiaglassbbwpc.wpcomstaging.com/">Cassia
-                                    Glass</a></h3>
-                            <h3>Email: <a href="mailto:danny.aics@gmail.com">danny.aics@gmail.com</a></h3>
-                            <h3>LinkedIn: <a href="https://ph.linkedin.com/in/daniel-romano-13a632239?trk=public_profile_browsemap">Daniel Romano</a></h3>
+                            <h4>Age: <span id="age"></span></h4>
+                            <h4>Contact Number: <a href="+639083833630">+63-908-383-3630</a></h4>
+                            <h4>Recent Project: <a href="https://cassiaglassbbwpc.wpcomstaging.com/">Cassia
+                                    Glass</a></h4>
+                            <h4>Email: <a href="mailto:danny.aics@gmail.com">danny.aics@gmail.com</a></h4>
+                            <h4>LinkedIn: <a
+                                    href="https://ph.linkedin.com/in/daniel-romano-13a632239?trk=public_profile_browsemap">Daniel
+                                    Romano</a></h4>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <section id="services" class="services">
