--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
 
     <header id="header">
-        <div class="mobile-menu">
+        <!-- <div class="mobile-menu">
             <div></div>
             <div></div>
             <div></div>
-        </div>
+        </div> -->
+
         <div class="container">
             <h1>Daniel Romano</h1>
             <h2>I'm an aspiring <span>Content Creator</span> and <span>Web Developer</span></h2>
@@ -45,7 +46,7 @@
                         class="profile-avatar">
                 </div>
                 <div class="col">
-                    <h1 style="font-size: 34px;font-weight: 800;color:var(--secondary)">Web Developer</h1>
+                    <h1 style="font-size: 34px;font-weight: 800;color:var(--secondary); padding-left: 30px;">Web Developer</h1>
 
                     <div class="about-row" style="padding-top: 30px;">
                         <div class="col">
@@ -61,6 +62,7 @@
                     </div>
                 </div>
             </div>
+            
     </section>
 
     <section id="services" class="services">
